Fixed an overall css problem where containers overflowing on pages

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,17 +2,12 @@
   position: relative;
   display: grid;
   grid-template-rows: 7rem 1fr;
-  height: 100%;
+  min-height: 100vh;
 }
 
 .layout {
   position: relative;
   grid-row: 1/3;
-}
-
-.main {
-  height: 100%;
-  padding: 1.5rem;
 }
 
 .overlay {
