--- a/frontend/src/components/songlist/SonglistModal.module.css
+++ b/frontend/src/components/songlist/SonglistModal.module.css
@@ -2,17 +2,47 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  top: -10rem;
-  left: -15rem;
-  width: 15rem;
-  height: 10rem;
+
+  top: -15rem;
+  left: -22rem;
+  width: 20rem;
+
+  padding: 0 1rem;
   z-index: 2001;
-  background-color: black;
+  background-color: var(--color-primary-light);
+}
+
+.deleteModal {
+  top: -5rem !important;
+}
+
+.modalList {
+  display: grid;
+  row-gap: 0.5rem;
+  overflow: hidden scroll;
+  max-height: 13rem;
+}
+
+.modalList:last-child {
+  margin-bottom: 0.5rem;
 }
 
 .header {
+  display: grid;
+  align-items: center;
+  justify-content: center;
   color: var(--color-primary-floor);
-  text-align: center;
+  min-height: 4rem;
   padding: 0.5rem;
   border-bottom: 1px solid var(--color-primary-floor);
+  margin-bottom: 0.5rem;
+}
+
+.btn {
+  border: none;
+  /* border-bottom: 1px solid var(--color-primary-orange); */
+  height: 4rem;
+  background-color: var(--color-primary-orange);
+  padding: 5px;
+  color: white;
 }
