--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,16 +22,8 @@
   box-sizing: border-box;
 }
 
-#root {
-  height: 100%;
-}
-
 html {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: var(--color-html-bg);
-  min-height: 100vh;
   font-size: 62.5%; /* 10px */
 }
 
@@ -51,6 +43,8 @@ body {
 
 main {
   background-color: var(--color-bg-white);
+  height: calc(100% - 7rem);
+  padding: 1.5rem;
 }
 
 code {
